# Atlas

./: .env.example  .gitignore  pyproject.toml
app/: config.py  db.py  main.py  models.py  schemas.py
app/routes/: conversations.py  messages.py  videos.py
app/services/: chat_stream.py  claude_client.py  ingestion.py  sanitize.py  study.py  twelvelabs.py  youtube.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/conversations/[id]/: page.tsx
frontend/src/app/videos/[id]/: page.tsx
frontend/src/components/: AtlasPlayer.tsx  MessageContent.tsx
frontend/src/components/ui/: hero-ascii-one.tsx
frontend/src/lib/: api.ts
tests/: conftest.py  test_chat_stream.py  test_claude_client.py  test_conversations_api.py  test_db.py  test_health.py  test_ingestion.py  test_messages_api.py  test_sanitize.py  test_study.py  test_twelvelabs.py  test_videos_api.py  test_youtube.py
