[project]
name = "cliff"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlmodel>=0.0.16",
  "httpx>=0.27",
  "anthropic>=0.40",
  "sse-starlette>=2.1",
  "yt-dlp>=2024.4.9",
  "lxml>=5.2",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "anyio>=4.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
